2015-07-27  Raphael 'kena' Poss  <r.poss@uva.nl>

	Add some demonstration programs.

	* demo/msort.c: Demonstrate a parallel merge sort.
	* demo/uart.c: Demonstrate a MGSim UART driver.
	* demo/speed.c: Demonstrate the flow of time.

	* demo/msort.c.d10,
	* demo/msort.c.d16: Example inputs for merge sort.

	* demo/Makefile.am (DEMOS): List the new programs.

2015-07-27  Raphael 'kena' Poss  <r.poss@uva.nl>

	Port the demo and benchmark programs to the latest toolchain.

	* demo/tmalloc.c,
	* demo/sep.c,
	* demo/pi.c,
	* demo/roman.c,
	* demo/ca1d_demo.c,
	* demo/ca1d_demo2.c,
	* demo/ca1d_main.c
	* demo/fibonacci.c,
	* benchmarks/sha1/sha1_alt.c,
	* benchmarks/sha1/sha1.c,
	* benchmarks/lib/benchmark.c: Read input arguments using
	argc/argv/getopt.

	* demo/pi.c,
	* demo/fibre.c: Ignore execution results on MIPSel targets, which
	do not support FP yet.

	* demo/pi.c: Also output different roundings.

	* benchmarks/sha1/sha1_alt.c,
	* benchmarks/sha1/sha1.c: Avoid generating code on platforms which
	do not support that many shared parameters.

	* benchmarks/mandel/mandel.c: Ensure main exits with a return
	code.

	* benchmarks/smooth/smooth.c: Avoid including obsolete header
	`slr.h'.

	* demo/checkers.c: Update the copyright notice.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify the FFT benchmarks.

	* benchmarks/fft/fft.h,
	* benchmarks/fft/fft-bench.c,
	* benchmarks/fft/fft_extra.c,
	* benchmarks/fft/fft_impl1.c,
	* benchmarks/fft/fft_impl2.c: Use plain C functions for `FFT_1',
	`FFT' and `FFT_Inv'.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the FFT benchmarks.

	* benchmarks/fft/fft-bench.c (work),
	* benchmarks/fft/fft_extra.c (FFT): Do not restrict to
	`PLACE_LOCAL', otherwise the inner family cannot spread any more.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the benchmarking makefile.

	* build-aux/benchmarks.mk: Do not use a common "fail"
	directory. Do provide `.bench' targets which automaticall expand