@@ -4,14 +4,6 @@
 
 set -e
 
-echo "Detecting which Autotools to use..."
-# Some systems ship both the latest Automake and
-# an older version, and default to the older. Try
-# to detect this.
-automake-1.11 --version >/dev/null 2>/dev/null \
-  && export AUTOMAKE=automake-1.11 \
-  && export ACLOCAL=aclocal-1.11
-
 if [ "$#" -eq "1" ]; then
   AUTORECONF=$1
   echo "Using \`$1' instead of \`autoreconf' command"
@@ -19,14 +11,11 @@ else
   AUTORECONF=autoreconf
 fi
 
-if test -x ../../sys/slc/build-aux/sl-init-autoconf; then
-   ../../sys/slc/build-aux/sl-init-autoconf
-else
-   sl-init-autoconf
-fi
+sl-init-autoconf
 
 (cd benchmarks/livermore && mkdir -p data && python ./ll-generate.py <ll-bounds.csv)
-(cd benchmarks/blas && ./gendata.sh)
+(cd benchmarks/blas && bash ./gendata.sh)
+(cd benchmarks/lib && bash genmake.sh)
 $AUTORECONF -v -f -i
 
 echo "Reconfiguration done."
